# hri-non-verbal

./: CMakeLists.txt  README.md  package.xml
launch/: grasps.launch  human_perception.launch  moveit.rviz  new_record.rviz  nonverbal.launch  planner.launch  record.launch  record_with_rosbag.launch  record_yumi.rviz  test_rviz.rviz  thesis.launch
objects/: board.stl  test_station.dae  test_station_fix.stl
src/: a  exagerate_trajectory.cpp  exagerate_trajectory_cartesian.cpp  exagerate_trajectory_constraints.cpp  exagerate_trajectory_pilz.cpp  exagerate_trajectory_yumi.cpp  interactive_marker.cpp  non_verbal_movements_yumi.cpp  pick_and_place  pick_and_place.cpp  stomp_pick_and_place.cpp  task.cpp  task_objects.cpp  transform_listener_service.cpp  yumi_safe.cpp
srv/: TransformListener.srv  boardOrientation.srv
